Created vCard FieldItem

--- a/templates/email-signature.html.twig
+++ b/templates/email-signature.html.twig
@@ -1,2 +1,2 @@
 <h3>Template type: email signature</h3>
-<strong>{{ contact.title }}</strong>
+<strong>{{ contact.name }}</strong>, <u>{{ contact.company }}</u>
