--- a/templates/default-vcard.html.twig
+++ b/templates/default-vcard.html.twig
@@ -1,3 +1,4 @@
-<h3>Title - {{ contact.title }}</h3>
-<p> Description: Lorem ipsum dolor</p>
+<h3>Template type: Default</h3>
+<h3>Name - {{ contact.name }}</h3>
+<p>Company - {{ contact.company }}</p>
 
