Added vcard.cardassets library

--- a/templates/default-vcard.html.twig
+++ b/templates/default-vcard.html.twig
@@ -1,4 +1,4 @@
-<h3>Template type: Default</h3>
-<h3>Name - {{ contact.name }}</h3>
-<p>Company - {{ contact.company }}</p>
-
+<div class="vcard theme_default">
+  <h3>Name - {{ contact.name }}</h3>
+  <p>Company - {{ contact.company }}</p>
+</div>
