--- a/templates/email-signature.html.twig
+++ b/templates/email-signature.html.twig
@@ -1,2 +1,4 @@
-<h3>Template type: email signature</h3>
-<strong>{{ contact.name }}</strong>, <u>{{ contact.company }}</u>
+<div class="vcard theme_email_signature">
+  <h1>{{ contact.name }}</h1>
+  <p><i>{{ contact.company }}</i></p>
+</div>
